--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
+    "json-schema-traverse": "^1.0.0",
     "locomotive-scroll": "^5.0.0-beta.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
