--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "locomotive-scroll": "^5.0.0-beta.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
