--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "locomotive-scroll": "^5.0.0-beta.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "react-pdf-viewer": "^0.1.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
